# Sugar-Lang

./: CHANGELOG.md  Cargo.toml  README.md  grammar.pest  sugar-lang.cabal
app/: Lexer.hs  Main.hs
src/: ast.rs  codegen.rs  commands.rs  lexer.rs  llvm.rs  main.rs  parser.rs  rid.rs  tokens.rs  unwrap_null.rs
src/llvm_compiler/: compiler.rs
sugar/: basecode.sug  class.sug  enum.sug  examplesugar.sug  struct.sug  toy.sug  toytest.sug
