[package]
name = "sugar-lang"
version = "0.1.0"
edition = "2021"
authors = ["lemonjamesd lemonjamesd@github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
inkwell = "0.0.0"
tracing = { version = "0.1.35", features = ["attributes"] }
tracing-subscriber = "0.3.15"
