[package]
name = "sugar-lang"
version = "0.1.0"
edition = "2021"
authors = ["lemonjamesd lemonjamesd@github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
build = "0.0.2"
clap = { version = "3.2.12", features = ["derive"] }
gag = "1.0.0"
tracing = { version = "0.1.35", features = ["attributes"] }
tracing-subscriber = "0.3.15"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
	"llvm12-0",
] }
pest = "2.3.1"
